# VXG.Uplink.SDK

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt  vxg_proxy_client.cc
cross/: example_cross.cmake  rockchip-aarch32-local.txt  rockchip-aarch32.txt
doc/: Doxyfile  app-dev.md  build-system.md  compile.md  libvxgproxyclient.doxygen.in  mainpage.md  meson.build
example/app/: meson.build  meson_options.txt
example/app/cross/: arm-example.txt
example/app/src/: vxg_proxy_client.cc
example/app/subprojects/: vxgproxyclient.wrap
src/: meson.build
src/agent/: Proxy.cpp  Proxy.h
subprojects/: .gitignore  libwebsockets.wrap  openssl.wrap
subprojects/packagefiles/libwebsockets/: meson.build  meson_options.txt
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/: VXG.README.txt  meson.build  meson_options.txt
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/cmake/: lws_config.h.in
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/include/libwebsockets/: lws-client.h
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/lib/core/: context.c
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/lib/core-net/: private-lib-core-net.h
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/lib/core-net/client/: connect.c
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/lib/roles/http/client/: client-http.c
subprojects/packagefiles/libwebsockets-v4.3.1-ssh-vxg/lib/tls/openssl/: openssl-client.c
subprojects/packagefiles/libwebsockets/cmake/: lws_config.h.in
subprojects/packagefiles/libwebsockets/include/libwebsockets/: lws-client.h  lws-misc.h
subprojects/packagefiles/libwebsockets/lib/core/: libwebsockets.c
subprojects/packagefiles/libwebsockets/lib/core-net/: connect.c  private-lib-core-net.h
subprojects/packagefiles/libwebsockets/lib/roles/http/: private-lib-roles-http.h
subprojects/packagefiles/libwebsockets/lib/roles/http/client/: client-handshake.c  client-http.c
subprojects/packagefiles/openssl-1.1.1/: Configure  meson.build
subprojects/packagefiles/openssl-1.1.1/Configurations/: unix-Makefile.tmpl
vxguplink/: CMakeLists.txt  Proxy.cpp  Proxy.h
vxguplink/cjson/: CMakeLists.txt
