option('gpl', type: 'feature', value: 'enabled',
  description: 'Allow ffmpeg use of GPL code, the resulting libs and binaries will be under GPL')
option('nonfree', type: 'feature', value: 'enabled',
  description: 'Allow ffmpeg use of nonfree code, the resulting libs and binaries will be unredistributable')
option('openssl', type: 'feature', value: 'enabled')

# libwebsockets options, openssl and lws crypto api
option('LWS_WITH_GENCRYPTO', type: 'boolean', value: true,
  description: 'Enable support for Generic Crypto apis independent of TLS backend')
option('LWS_WITH_OPENSSL', type: 'boolean', value: true,
  description: 'Include OpenSSL support')
# OPENSSL CA certs bundle path
option('LWS_OPENSSL_CLIENT_CERTS', type: 'string', value: '/etc/ssl/certs/',
  description: 'OpenSSL SSL CA certs path. [default=/etc/ssl/certs/]')
option('LWS_WITH_TLS', type: 'boolean', value: true,
  description: 'Include TLS support')
option('LWS_WITH_SSL', type: 'boolean', value: true,
  description: 'Include SSL support (defaults to OpenSSL or similar, mbedTLS if LWS_WITH_MBEDTLS is set)')
option('LWS_WITH_SOCKS5', type: 'boolean', value: true,
  description: 'Allow use of SOCKS5 proxy on client connections')

# Some cross compilation toolchains have no backtrace functionality,
# this option should be used to specify custom subproject with
# backtrace() implementation.
# vxgproxyclient lib provides libubacktrace backtrace() implementation.
# Set value to libubacktrace if you beleive that your platform has no
# backtrace().
option('backtrace_lib', type: 'string', value: '',
        description: 'Backtrace lib, used only for cross-compilation')

#
# Security settings for TLS
#

# OPENSSL allowed ciphers list, used for https and secure websockets.
option('OPENSSL_CIPHERS_LIST', type: 'string', value: '!RC4:!MD5:AES128-SHA:AES256-SHA:HIGH:!DSS:!aNULL')
# Don't validate server SSL certificates
option('SSL_ALLOW_INSECURE_CERTS', type: 'boolean', value: true)
